# aikaggler

./: .gitignore  README.md  justfile  pyproject.toml  run_competitions.py
data/MABe-mouse-behavior-detection/: aggregated_notebooks.json  aggregated_notebooks.md  aggregated_solutions.json  aggregated_solutions.md  competition.classification.json  competition.json  github_links.json
data/ai-mathematical-olympiad-progress-prize-2/: aggregated_notebooks.json  aggregated_notebooks.md  aggregated_solutions.json  aggregated_solutions.md  competition.classification.json  competition.json  github_links.json
data/ai-mathematical-olympiad-progress-prize-3/: aggregated_notebooks.json  aggregated_notebooks.md  aggregated_solutions.json  aggregated_solutions.md  competition.classification.json  competition.json
data/arc-prize-2024/: competition.json
data/arc-prize-2025/: aggregated_notebooks.json  aggregated_notebooks.md  aggregated_solutions.json  aggregated_solutions.md  competition.classification.json  competition.json  github_links.json
data/ariel-data-challenge-2025/: aggregated_notebooks.json  aggregated_notebooks.md  aggregated_solutions.json  aggregated_solutions.md  competition.classification.json  competition.json  github_links.json
data/bigquery-ai-hackathon/: aggregated_notebooks.json  aggregated_notebooks.md  aggregated_solutions.json  aggregated_solutions.md  competition.classification.json  competition.json  github_links.json
data/birdclef-2025/: aggregated_notebooks.json  aggregated_notebooks.md  aggregated_solutions.json  aggregated_solutions.md  (+3 more)
(+3086 files in other folders)
