[project]
name = "kaggler"
version = "0.1.0"
description = "Toolkit to compete in Kaggle competitions."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
akc = "kaggler.plugins.solution_analysis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kaggler"]
